# ai_engineer_test

./: .env.example  .gitignore  README.md  TASK.md  pyproject.toml
output/: clauses.json
src/charter_parser/: __init__.py  __main__.py  cli.py  models.py  pdf_extract.py  pipeline.py  segment.py
tests/: test_models.py  test_pdf_extract.py  test_segment.py
